# TR_Dlib_OpenCV_YuzTanima

./: README.md
FotografCekimi/: CMakeLists.txt  headshots.cpp  klasorOlusturma
ModelEgitimi/: CMakeLists.txt  trainModel.cpp
YuzTanima/: CMakeLists.txt  faceRecognition.cpp
